# PCSX2_Memcard_AutoBackup

./: .gitattributes  .gitignore  CMakeLists.txt  PCSX2_Memcard_AutoBackup.pro  PCSX2_Memcard_Manager.pro  README.md  cc.cpp  logo.rc  start_setuphelper.bat  start_shell.bat
GUI/: GUI.pro
cmake/: is_file_updated_check.cmake
config/: README.md
gui/: .gitignore
gui/setup/: ini.py  setup.py  setup.spec
ico/: ico.psd
include/: create_config.h
shell/: CMakeLists.txt  commandlist.cpp  commandlist.h  shell.cpp
src/: CMakeLists.txt  create_config.cpp  formathelp.cpp  memcardpathget.cpp  memcardpathget.h  renaini.cpp
